--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <div class="row">
 
                         <div class="col-md-4">
-                            <h3>Xash3D FWGS</h3>
+                            <h3><a href="about-project.html">Xash3D FWGS</a></h3>
                             <p>Xash3D engine ported to SDL. Works even on your phone!<br>
                                 <a href="http://www.moddb.com/games/xash3d-android">
               <img src="http://button.moddb.com/rating/medium/games/45401.png" alt="Xash3D Android">
@@ -405,38 +405,15 @@
 
         <div id="contacts" class="section">
 
-            <div class="section-title">
+            <div class="section-title p-b-0 m-b-0">
                 <h2>Contact Us</h2>
             </div>
 
-            <div class="content container">
+            <div class="content container m-t-0">
+                <p class="text-center">
 
-                <form class="contact-form row" action="mailer/contact.php" method="post">
-                    <div class="col-md-6">
-                        <label><strong>Full Name *</strong>
-                                    <input class="required" type="text" name="name">
-                                </label>
-                        <label><strong>Email *</strong>
-                                    <input class="required" type="text" name="email">
-                                </label>
-                        <label><strong>Subject</strong>
-                                    <select name="subject">
-                                        <option value="Subject 1">Subject 1</option>
-                                        <option value="Subject 2">Subject 2</option>
-                                        <option value="Subject 3">Subject 3</option>
-                                        <option value="Subject 4">Subject 4</option>
-                                    </select>
-                                </label>
-                    </div>
-                    <div class="col-md-6">
-                        <label><strong>Message *</strong>
-                                    <textarea class="required" name="message"></textarea>
-                                </label>
-                        <p>( <strong>*</strong> ) = Mandatory field</p>
-                        <input class="submit btn md" type="submit" name="submit" value="Send Message">
-                    </div>
-                    <input type="hidden" name="form_type" value="contact">
-                </form>
+                You can contact us on a Jabber conference: sdlash@conference.celest.in. Or using IRC: #sdlash on QuakeNet
+                </p>
 
             </div>
 
