Add more projects.

--- a/index.html
+++ b/index.html
@@ -322,17 +322,17 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.xenwar">Xen-Warrior</a></h3>
-                            <p>Android port of Half-Life Xen-Warrior mod on Xash3D FWGS engine.</p>
+                            <p>Android port of Half-Life: Xen-Warrior mod on Xash3D FWGS engine.</p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.tot">Times of Troubles</a></h3>
-                            <p>Android port of Half-Life Times of Troubles mod on Xash3D FWGS engine.</p>
+                            <p>Android port of Half-Life: Times of Troubles mod on Xash3D FWGS engine.</p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.eftd">Escape from the Darkness</a></h3>
-                            <p>Android port of Half-Life Escape from the Darkness mod on Xash3D FWGS engine.</p>
+                            <p>Android port of Half-Life: Escape from the Darkness mod on Xash3D FWGS engine.</p>
                         </div>
 
                     </div>
@@ -346,14 +346,104 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.parabot">Parabot CB</a></h3>
-                            <p>Android port of multiplayer bots for Half-Life:Deathmatch on Xash3D FWGS engine.</p>
+                            <p>Android port of multiplayer bots for Half-Life: Deathmatch on Xash3D FWGS engine.</p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.bubblemod">Bubblemod</a></h3>
-                            <p>Android port of famous Half-Life:Deathmatch mod on Xash3D FWGS engine.</p>
+                            <p>Android port of famous Half-Life: Deathmatch mod on Xash3D FWGS engine.</p>
                         </div>
-                        
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.poke646">Poke646</a></h3>
+                            <p>Android port of famous Poke646 mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.vendetta">Poke646: Vendetta</a></h3>
+                            <p>Android port of famous Poke646: Vendetta mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.zx">Zombie-X</a></h3>
+                            <p>Android port of famous Half-Life: Zombie-X mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.aomdc">Afraid of Monsters: Director's Cut</a></h3>
+                            <p>Android port of famous Afraid of Monsters: Director's Cut mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.shall">Swiss Cheese Halloween 2002</a></h3>
+                            <p>Android port of famous Half-life: Halloween mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.hunger">They Hunger</a></h3>
+                            <p>Android port of famous They Hunger: Trilogy mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.cad">Cleaner's Adventures</a></h3>
+                            <p>Android port of famous Half-Life: Cleaner's Adventures mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.rpoint">ResidualLauncher</a></h3>
+                            <p>ResidualLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Half-Life: Residual Point and Half-Life: Residual Life.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.visitors">Visitors</a></h3>
+                            <p>Android port of famous Half-Life: Visitors mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.ag">Adrenaline Gamer</a></h3>
+                            <p>Android port of famous Adrenaline Gamer 6.6 mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://github.com/nekonomicon/TheGate-android/releases">The Gate</a></h3>
+                            <p>Android port of famous Half-Life: The Gate mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://github.com/nekonomicon/SOHL-1.2-android/releases">SOHL12Launcher</a></h3>
+                            <p>SOHL12Launcher is a standalone game which uses Xash3D FWGS engine and compatible with Spirit of Half-Life 1.2 toolkit.</p>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.noffice">Night at the Office</a></h3>
+                            <p>Android port of famous Night at the Office mod on Xash3D FWGS engine.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h3><a href="https://github.com/nekonomicon/HalfScrewed-android/releases">Half-Screwed Death and Rebirth</a></h3>
+                            <p>Android port of famous Half-Screwed Death and Rebirth mod on Xash3D FWGS engine.</p>
+                        </div>
+
                     </div>
 
                 </div>
