--- a/xash3d.html
+++ b/xash3d.html
@@ -74,6 +74,8 @@
                         <p>Xash3D Engine is a custom Gold Source engine rewritten from scratch. Xash3D is compatible with many of the Gold Source games and mods and should be able to run almost any existing singleplayer Half-Life mod without a hitch. The multiplayer part is not yet completed, multiplayer mods should work just fine, but bear in mind that some features may not work at all or work not exactly the way they do in Gold Source Engine.</p>
 
                         <p>Xash3D FWGS is a fork of Xash3D Engine, which aims on crossplatform, perfect online game and compability with original Xash3D and Gold Source.</p>
+                        
+                        <p><a href="pp/privacy-policy-xash3d.html">Privacy Policy</a></p>
 
                     </div>
 
