Update base pp template

--- a/tools/base.html
+++ b/tools/base.html
@@ -5,8 +5,8 @@
         <title>Privacy Policy</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <link rel="shortcut icon" href="favicon.ico">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
 
@@ -20,8 +20,8 @@
                     <div class="container">
 
                         <h1 id="logo">
-                            <a href="index.html">
-                                <img src="img/logo.png" alt="The FWGS">
+                            <a href="../index.html">
+                                <img src="../img/logo.png" alt="FWGS">
                             </a>
                         </h1>
 
@@ -30,7 +30,7 @@
                         <a id="nav-toggle" href="#"><span></span></a>
                         <nav id="nav-menu">
                             <ul>
-                                <li><a title="Home" href="index.html">Home</a></li>
+                                <li><a title="Home" href="../index.html">Home</a></li>
                             </ul>
                         </nav>
 
@@ -126,14 +126,14 @@
                 <div class="row">
 
                     <div class="footer-col footer-contacts col-sm-12 col-md-3">
-                        <p><img width="200" class="align-center" src="img/logo.png" alt="TATTOOIST - Tattoo Studio"></p>
+                        <p><img width="200" class="align-center" src="../img/logo.png" alt="FWGS"></p>
 
                         <div class="contact-item"><span>FWGS - Flying with Gauss</span> </div>
                         <div class="contact-item"><span>Email:</span> <strong><a href="mailto:contact@fwgs.ru">contact@fwgs.ru</a></strong></div>
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="YouTube" href=" https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
+                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
                                 <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
                             </ul>
@@ -151,10 +151,10 @@
 
         </div>
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/common.js"></script>
-        <script src="js/config.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/common.js"></script>
+        <script src="../js/config.js"></script>
+        <script src="../js/main.js"></script>
 
     </body>
 </html>
