--- a/index.html
+++ b/index.html
@@ -276,20 +276,24 @@
 
                         <div class="col-md-4">
                             <h3><a href="xash3d.html">Xash3D FWGS</a></h3>
-                            <p>Xash3D engine ported to SDL. Works even on your phone!<br>
-								<a href="pp/privacy-policy-xash3d.html">Privacy Policy</a>
-                                <a href="http://www.moddb.com/games/xash3d-android">
-									<img src="http://button.moddb.com/rating/medium/games/45401.png" alt="Xash3D Android">
-								</a>
-                                <a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.hl">
-									<img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" height="50">
-								</a>
-							</p>
+                            <p>Xash3D engine ported to SDL. Works even on your phone!
+                            <br>
+                            <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a>
+                            <br>
+                            <a href="http://www.moddb.com/games/xash3d-android">
+                            <img src="http://button.moddb.com/rating/medium/games/45401.png" alt="Xash3D Android">
+                            </a>
+                            <a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.hl">
+                            <img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" height="50">
+                            </a>
+                            </p>
                         </div>
                         <div class="col-md-4">
                             <h3><a href="cs16client.html">CS16Client</a></h3>
-                            <p>Counter-Strike 1.6 Android port using Xash3D FWGS engine, rewritten CS1.6 client library and ReGameDLL_CS<br>
-								<a href="pp/privacy-policy-cs16client.html">Privacy Policy</a>
+                            <p>Counter-Strike 1.6 Android port using Xash3D FWGS engine, rewritten CS1.6 client library and ReGameDLL_CS
+                            <br>
+                            <a href="pp/privacy-policy-cs16client.html">Privacy Policy</a>
+                            <br>
                                 <a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.cs16client">
 									<img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" height="50">
 								</a>
@@ -311,13 +315,13 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.bshift">BSLauncher</a></h3>
                             <p>BSLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Half-Life: Blue Shift.
-                            <a href="pp/privacy-policy-bshift.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-bshift.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.blackops">Black OPS</a></h3>
                             <p>Android port of famous Black OPS mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-blackops.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-blackops.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -327,19 +331,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.xenwar">Xen-Warrior</a></h3>
                             <p>Android port of Half-Life: Xen-Warrior mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-xenwar.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-xenwar.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.tot">Times of Troubles</a></h3>
                             <p>Android port of Half-Life: Times of Troubles mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-tot.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-tot.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.eftd">Escape from the Darkness</a></h3>
                             <p>Android port of Half-Life: Escape from the Darkness mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-eftd.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-eftd.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -349,19 +353,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.dmc">QCLauncher</a></h3>
                             <p>QCLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Deathmatch Classic.
-                            <a href="pp/privacy-policy-dmc.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-dmc.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.parabot">Parabot CB</a></h3>
                             <p>Android port of multiplayer bots for Half-Life: Deathmatch on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-parabot.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-parabot.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.bubblemod">Bubblemod</a></h3>
                             <p>Android port of famous Half-Life: Deathmatch mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-bubblemod.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-bubblemod.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -371,19 +375,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.poke646">Poke646</a></h3>
                             <p>Android port of famous Poke646 mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-poke646.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-poke646.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.vendetta">Poke646: Vendetta</a></h3>
                             <p>Android port of famous Poke646: Vendetta mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-vendetta.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-vendetta.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.zx">Zombie-X</a></h3>
                             <p>Android port of famous Half-Life: Zombie-X mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-zx.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-zx.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -393,19 +397,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.aomdc">Afraid of Monsters: Director's Cut</a></h3>
                             <p>Android port of famous Afraid of Monsters: Director's Cut mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-aomdc.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-aomdc.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.shall">Swiss Cheese Halloween 2002</a></h3>
                             <p>Android port of famous Half-life: Halloween mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-shall.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-shall.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.hunger">They Hunger</a></h3>
                             <p>Android port of famous They Hunger: Trilogy mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-hunger.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-hunger.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -415,19 +419,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.cad">Cleaner's Adventures</a></h3>
                             <p>Android port of famous Half-Life: Cleaner's Adventures mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-cad.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-cad.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.rpoint">ResidualLauncher</a></h3>
                             <p>ResidualLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Half-Life: Residual Point and Half-Life: Residual Life.
-                            <a href="pp/privacy-policy-rpoint.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-rpoint.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.visitors">Visitors</a></h3>
                             <p>Android port of famous Half-Life: Visitors mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-visitors.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-visitors.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -437,19 +441,19 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=su.xash.xash3d.ag">Adrenaline Gamer</a></h3>
                             <p>Android port of famous Adrenaline Gamer 6.6 mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-ag.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-ag.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/TheGate-android/releases">The Gate</a></h3>
                             <p>Android port of famous Half-Life: The Gate mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-TheGate.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-TheGate.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/SOHL-1.2-android/releases">SOHL12Launcher</a></h3>
                             <p>SOHL12Launcher is a standalone game which uses Xash3D FWGS engine and compatible with Spirit of Half-Life 1.2 toolkit.
-                            <a href="pp/privacy-policy-sohl.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-sohl.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
@@ -459,13 +463,13 @@
                         <div class="col-md-4">
                             <h3><a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.noffice">Night at the Office</a></h3>
                             <p>Android port of famous Night at the Office mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-noffice.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-noffice.html">Privacy Policy</a><br></p>
                         </div>
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/HalfScrewed-android/releases">Half-Screwed Death and Rebirth</a></h3>
                             <p>Android port of famous Half-Screwed Death and Rebirth mod on Xash3D FWGS engine.
-                            <a href="pp/privacy-policy-HalfScrewed.html">Privacy Policy</a></p>
+                            <br><a href="pp/privacy-policy-HalfScrewed.html">Privacy Policy</a><br></p>
                         </div>
 
                     </div>
