Add discord widget. Replace all THE FWGS by FWGS.

--- a/index.html
+++ b/index.html
@@ -493,7 +493,10 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
-                You can contact us on a Jabber conference: <a href="xmpp:fwgs@conference.jabber.ru">fwgs@conference.jabber.ru</a>.
+                You can contact us on a Jabber conference: <a href="xmpp:fwgs@conference.jabber.ru">fwgs@conference.jabber.ru</a>...<br>
+                Or you can join our Discord server!<br>
+                <iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+                
                 </p>
             </div>
 
@@ -514,12 +517,7 @@
                 <div class="row">
 
                     <div class="text-center">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=GQPEHWNKFS29A">
-            <img src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" alt="PayPal – The safer, easier way to pay online.">
-          </a><br>
-
-                        <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410012513146482&amp;quickpay=shop&amp;payment-type-choice=on&amp;mobile-payment-type-choice=on&amp;writer=buyer&amp;targets-hint=SDLash3D+Team+Donation&amp;default-sum=200&amp;button-text=03&amp;successURL=http%3A%2F%2Fsdlash3d.github.io%2Fthank-you.html" width="450" height="211">
-          </iframe>
+                        <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410012513146482&amp;quickpay=shop&amp;payment-type-choice=on&amp;mobile-payment-type-choice=on&amp;writer=buyer&amp;targets-hint=SDLash3D+Team+Donation&amp;default-sum=200&amp;button-text=03&amp;successURL=http%3A%2F%2Fsdlash3d.github.io%2Fthank-you.html" width="450" height="211"></iframe>
                     </div>
                 </div>
 
@@ -538,15 +536,15 @@
                 <div class="row">
 
                     <div class="footer-col footer-contacts col-sm-12 col-md-3">
-                        <p><img width="200" class="align-center" src="img/logo.png" alt="THE TATTOOIST - Tattoo Studio"></p>
+                        <p><img width="200" class="align-center" src="img/logo.png" alt="FWGS - Flying with Gauss"></p>
 
-                        <div class="contact-item"><span>THE FWGS - Flying with Gauss</span> </div>
+                        <div class="contact-item"><span>FWGS - Flying with Gauss</span> </div>
                         <div class="contact-item"><span>Email:</span> <strong><a href="mailto:contact@fwgs.ru">contact@fwgs.ru</a></strong></div>
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="Youtube" href=" https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
-                                <li><a title="Moddb" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
+                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
+                                <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
                             </ul>
                         </div>
