--- a/xash3d.html
+++ b/xash3d.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>The FWGS</title>
+        <title>Xash3D FWGS</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="shortcut icon" href="favicon.ico">
@@ -21,7 +21,7 @@
 
                         <h1 id="logo">
                             <a href="index.html">
-                                <img src="img/logo.png" alt="The FWGS">
+                                <img src="img/logo.png" alt="FWGS">
                             </a>
                         </h1>
 
@@ -121,15 +121,15 @@
                 <div class="row">
 
                     <div class="footer-col footer-contacts col-sm-12 col-md-3">
-                        <p><img width="200" class="align-center" src="img/logo.png" alt="THE TATTOOIST - Tattoo Studio"></p>
+                        <p><img width="200" class="align-center" src="img/logo.png" alt="FWGS - Flying with Gauss"></p>
 
-                        <div class="contact-item"><span>THE FWGS - Flying with Gauss</span> </div>
+                        <div class="contact-item"><span>FWGS - Flying with Gauss</span> </div>
                         <div class="contact-item"><span>Email:</span> <strong><a href="mailto:contact@fwgs.ru">contact@fwgs.ru</a></strong></div>
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="Youtube" href=" https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
-                                <li><a title="Moddb" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
+                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
+                                <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
                             </ul>
                         </div>
