--- a/cs16client.html
+++ b/cs16client.html
@@ -91,7 +91,7 @@
 
                 <!-- ============ Other Info - START ============ -->
 
-                <div class="section dark">
+                <!--<div class="section dark">
 
                     <div class="content container">
 
@@ -112,7 +112,7 @@
 
                     </div>
 
-                </div>
+                </div>-->
 
                 <!-- ============ Other Info - END ============ -->
 
@@ -127,15 +127,15 @@
                 <div class="row">
 
                     <div class="footer-col footer-contacts col-sm-12 col-md-3">
-                        <p><img width="200" class="align-center" src="img/logo.png" alt="THE TATTOOIST - Tattoo Studio"></p>
+                        <p><img width="200" class="align-center" src="img/logo.png" alt="FWGS - Flying with Gauss"></p>
 
-                        <div class="contact-item"><span>THE FWGS - Flying with Gauss</span> </div>
+                        <div class="contact-item"><span>FWGS - Flying with Gauss</span> </div>
                         <div class="contact-item"><span>Email:</span> <strong><a href="mailto:contact@fwgs.ru">contact@fwgs.ru</a></strong></div>
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="Youtube" href=" https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
-                                <li><a title="Moddb" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
+                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
+                                <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
                             </ul>
                         </div>
