--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="xash3d.html">Xash3D FWGS</a></h3>
-                            <p>Xash3D engine ported to SDL. Works even on your phone!
+                            <p>Xash3D engine fork with many new features: high portability, advanced multiplayer, touchscreen & gamepad support and much more.
                             <br>
                             <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a>
                             <br>
