index: remove information about Jabber conference, it doesn't exist for a long time anyway

--- a/index.html
+++ b/index.html
@@ -613,8 +613,7 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
-                You can contact us on a Jabber conference: <a href="xmpp:fwgs@conference.jabber.ru">fwgs@conference.jabber.ru</a>...<br>
-                Or you can join our Discord server!<br>
+                Join our Discord server!<br>
                 <iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                 
                 </p>
