--- a/index.html
+++ b/index.html
@@ -613,9 +613,9 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
-                Join our Discord server!<br>
-                <iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-                
+			<a href="https://discord.fwgs.ru">Join our Discord guild!</a>
+			<br>
+                	<iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                 </p>
             </div>
 
