--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <!-- ============ Last Works - START ============ -->
 
-            <!--<div id="last-works" class="section">
+            <div id="last-works" class="section">
 
                 <div class="section-title">
                     <h2>Gallery</h2>
@@ -258,7 +258,7 @@
 
                 </div>
 
-            </div>-->
+            </div>
 
             <!-- ============ Last Works - END ============ -->
 
