Disable donation widget.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a title="Gallery" href="#last-works">Gallery</a></li>
                             <li><a title="Our Project" href="#services">Our Project</a></li>
                             <li><a title="Contact Us" href="#contacts">Contact Us</a></li>
-                            <li><a title="Appointment" href="#support"><i class="fa fa-credit-card"></i>Support us</a></li>
+                            <!--<li><a title="Appointment" href="#support"><i class="fa fa-credit-card"></i>Support us</a></li>-->
                         </ul>
                     </nav>
 
@@ -625,7 +625,7 @@
 
         <!-- ============ Journal - START ============ -->
 
-        <div id="support" class="section dark">
+        <!--<div id="support" class="section dark">
 
             <div class="section-title">
                 <h2><i class="fa fa-credit-card"></i>Support us</h2>
@@ -642,7 +642,7 @@
 
             </div>
 
-        </div>
+        </div>-->
 
         <!-- ============ Journal - END ============ -->
 
