Update discord link.

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
-			<a href="http://discord.fwgs.ru">Join our Discord guild!</a>
+			<a href="http://fwgsdiscord.mentality.rip">Join our Discord guild!</a>
 			<br>
 			<iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="280" height="500" allowtransparency="true" frameborder="0"></iframe>
                 </p>
