Update social links.

--- a/index.html
+++ b/index.html
@@ -662,9 +662,11 @@
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
+                                <!--<li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>-->
                                 <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
-                                <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
+                                <li><a title="VK" href="https://vk.com/fwgs.testing"><i class="fa fa-vk"></i></a></li>
+                                <li><a title="GitHub" href="https://github.com/FWGS"><i class="fa fa-github"></i></a></li>
+                                <li><a title="Gitea" href="https://git.mentality.rip/FWGS"><i class="fa fa-git"></i></a></li>
                             </ul>
                         </div>
 
